sorted for clarity

--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,33 @@
-.ipynb_checkpoints/
-.snakemake/
-bin/software/
-data/
-infra/
-logs/
-reference_alignment/
-raw_data/
-results/
-undetermined_demultiplex_data/
-jovian_*
-sample_sheet*
-backup*
-DELME*
-delme*
 *.fa
 *.fasta
 *.stderr
 *.stdout
-LSF_Snakemake.*
-private_*
 .github/
+.ipynb_checkpoints/
+.jovianrc
+.ncbirc
+.nfs*
+.snakemake/
 .vscode/
-config/variables.yaml
+DELME*
+LSF_Snakemake.*
 PZN_*/
-core.*
 archive_*.tar
 archive_*.tar.gz
-.nfs*
-.ncbirc
-.jovianrc
+backup*
+bin/software/
+config/variables.yaml
+core*
+data/
+delme*
 docs/build
 docs/source/_build
+infra/
+jovian_*
+logs/
+private_*
+raw_data/
+reference_alignment/
+results/
+sample_sheet*
+undetermined_demultiplex_data/
