--- a/bin/Snakefile
+++ b/bin/Snakefile
@@ -17,6 +17,10 @@ Funding:
     This project/research has received funding from the European Union’s
     Horizon 2020 research and innovation programme under grant agreement
     No. 643476. and the Dutch working group on molecular diagnostics (WMDI).
+Automation:
+    iRODS automatically executes this workflow for all "vir-ngs" labelled
+    Illumina sequencing runs. See the internal Gitlab repo for the wrapper
+    with additional information.
 """
 
 #@################################################################################
@@ -67,9 +71,12 @@ with open(config["sample_sheet"]) as sample_sheet_file:
     #>#### Scaffold analysis and metrics                                     #####
     #>############################################################################
 
-    #TODO hier nog een if statement hieronder maken met keuze rmDups yes or no, deze optie verplaatsen naar de config file.
+    if config["PCR_dup_removal"] == True:
+        include: "rules/Read2scaffold_alignment_with_rmDup_and_fraglength.smk"
 
-    include: "rules/Fragment_length.smk"
+    if config["PCR_dup_removal"] == False:
+        include: "rules/Read2scaffold_alignment_without_rmDup_and_fraglength.smk"
+    
     include: "rules/SNP_calling.smk"
     include: "rules/ORF_analysis.smk"
     include: "rules/Contig_metrics.smk"
@@ -177,7 +184,6 @@ onstart:
 onerror:
     shell("""
         rm -f data/scaffolds_filtered/*.html
-        rm -f results/igv.html
         rm -rf data/html/
     """)
 
