Added make for installation on WSL1

--- a/bin/envs/Jovian_helper_environment.yaml
+++ b/bin/envs/Jovian_helper_environment.yaml
@@ -8,4 +8,4 @@ dependencies:
   - blast==2.9.0
   - krona==2.7.1
   - mgkit==0.3.4
-
+  - make==4.2.1 # Not installed by default on WSL, needed for Krona db updater
