--- a/bin/envs/Nano_Ref/Nano_ref_alignment.yaml
+++ b/bin/envs/Nano_Ref/Nano_ref_alignment.yaml
@@ -1,9 +1,10 @@
-name: ref_alignment
+name: Nanopore_ref_alignment
 channels:
   - bioconda
   - conda-forge
   - defaults
 dependencies:
+    - minimap2==2.17
     - samtools==1.10
     - bowtie2==2.3.5
     - gawk==4.2.1
