Jovian multi-tool wrapper compat

--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@ PATH_JOVIAN_HELPER_YAML="bin/envs/Jovian_helper_environment.yaml"
 HELPER_NAME=$(head -n 1 ${PATH_JOVIAN_HELPER_YAML} | cut -f2 -d ' ') # Extract Conda environment name as specified in yaml file
 
 ### Default values for CLI parameters
+workflow="NONE"
 INPUT_DIR="raw_data/"
 JOVIAN_HELP="FALSE"
 SNAKEMAKE_HELP="FALSE"
@@ -38,6 +39,8 @@ JOVIAN_UPDATE="FALSE"
 CHANGE_VERSION="FALSE"
 QUEUE_NAME_OVERRIDE="FALSE"
 QUEUE_NAME_REPLACEMENT="DEFAULT"
+REFERENCE_FASTA="NONE"
+PRIMER_FASTA="NONE"
 
 
 ## database installer vars
