--- a/config/pipeline_parameters.yaml
+++ b/config/pipeline_parameters.yaml
@@ -21,9 +21,13 @@ threads:
     SNP_calling: 14
     Fragment_length_analysis: 4
     quantify_output: 4
-    # Settings for the optional reference alignment steps:
+    # Settings for the Illumina-reference workflow
     Illumina_align_to_reference: 14
-
+    # Settings for the Nanopore-reference workflow
+    Adapter_trimming_cpu: 26
+    Nanopore_reference_alignment: 26
+    Nanopore_cleanup: 26
+    nanopore_primer_removal: 26
 
 ######################################
 ### Pipeline parameters            ###
