Snakemake reports for all workflows

--- a/config/pipeline_parameters.yaml
+++ b/config/pipeline_parameters.yaml
@@ -8,6 +8,8 @@ WrapperSettings:
 
  
 sample_sheet: sample_sheet.yaml
+reference_file: /data/references/sars-cov-2.fasta
+primer_file: NONE
 
 ######################################
 ### Technical parameters           ###
