add --db-reset flag (missing command)

--- a/.env
+++ b/.env
@@ -38,6 +38,7 @@ JOVIAN_UPDATE="FALSE"
 CHANGE_VERSION="FALSE"
 QUEUE_NAME_OVERRIDE="FALSE"
 QUEUE_NAME_REPLACEMENT="DEFAULT"
+RESET_DB="FALSE"
 
 
 ## database installer vars
