--- a/bin/envs/Jovian_helper_environment.yaml
+++ b/bin/envs/Jovian_helper_environment.yaml
@@ -9,4 +9,5 @@ dependencies:
   - krona==2.7.1
   - mgkit==0.3.4
   - make==4.2.1 # Not installed by default on WSL, needed for Krona db updater
+  - gawk==5.1.0
   - awscli
