Quit if snakemake vers isn't right in master env

--- a/.env
+++ b/.env
@@ -15,7 +15,6 @@ PATH_JOVIAN_HELPER_YAML="bin/envs/Jovian_helper_environment.yaml"
 HELPER_NAME=$(head -n 1 ${PATH_JOVIAN_HELPER_YAML} | cut -f2 -d ' ') # Extract Conda environment name as specified in yaml file
 
 ### Default values for CLI parameters
-workflow="NONE"
 INPUT_DIR="raw_data/"
 JOVIAN_HELP="FALSE"
 SNAKEMAKE_HELP="FALSE"
@@ -43,6 +42,9 @@ REFERENCE_FASTA="NONE"
 PRIMER_FASTA="NONE"
 RESET_DB="FALSE"
 
+## environment and workflow parameters
+req_snakever="5.17.0"
+workflow="NONE"
 
 ## database installer vars
 PATHING_SINGLE="FALSE"
