fix typos and move shell-env wide variable

--- a/.env
+++ b/.env
@@ -45,6 +45,7 @@ RESET_DB="FALSE"
 ## environment and workflow parameters
 req_snakever="5.19.3"
 workflow="NONE"
+supp_workflow=( "'Illumina-metagenomics'" "'Illumina-reference'" "'Nanopore-reference'" )
 
 ## database installer vars
 PATHING_SINGLE="FALSE"
