--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 VERSION=$(git describe --tags)
 
 UNIQUE_ID=$(bin/includes/generate_id)
-HOSTNAME=$(hostname)
+HOSTNAME=$(hostname -I | awk '{print $1;exit}')
 SYSTEM_CORES=$(grep -c ^processor /proc/cpuinfo)
 USE_CORES=$(expr "${SYSTEM_CORES}" - 2)
 
