start of coverage per amplicon statistics table

--- a/.env
+++ b/.env
@@ -13,6 +13,9 @@ PATH_JOVIAN_MASTER_YAML="bin/envs/Jovian_master_environment.yaml"
 MASTER_NAME=$(head -n 1 ${PATH_JOVIAN_MASTER_YAML} | cut -f2 -d ' ') # Extract Conda environment name as specified in yaml file
 PATH_JOVIAN_HELPER_YAML="bin/envs/Jovian_helper_environment.yaml"
 HELPER_NAME=$(head -n 1 ${PATH_JOVIAN_HELPER_YAML} | cut -f2 -d ' ') # Extract Conda environment name as specified in yaml file
+PATH_JOVIAN_STATS_yaml="bin/envs/Jovian_coverage_statistics.yaml"
+STATS_NAME=$(head -n 1 ${PATH_JOVIAN_STATS_yaml} | cut -f2 -d ' ') # Extract Conda environment name as specified in yaml file
+
 
 ### Default values for CLI parameters
 INPUT_DIR="raw_data/"
