--- a/bin/envs/Nano_clean.yaml
+++ b/bin/envs/Nano_clean.yaml
@@ -1,18 +1,19 @@
 name: Nano_clean_and_QC
 channels:
   - bioconda
+  - conda-forge
   - intel
   - anaconda
-  - conda-forge
   - defaults
 dependencies:
-  - python==3.8.6
+  - python=3.7
   - minimap2==2.17
   - samtools==1.11
   - bedtools==2.29.2
-  - pysam
-  - pysamstats
-  - pandas
+  - pysam==0.16.0.1
+  - pysamstats==1.1.2
+  - pandas==1.1.3
+  - mkl-service
   - biopython==1.78
   - openjdk==11.0.8
   - fastqc==0.11.8
