--- a/bin/envs/Nano_ref_consensus.yaml
+++ b/bin/envs/Nano_ref_consensus.yaml
@@ -1,15 +1,15 @@
 name: Nano_Consensus
 channels:
   - bioconda
+  - conda-forge
   - intel
   - anaconda
-  - conda-forge
   - defaults
 dependencies:
-  - python==3.8.6
-  - pysam
-  - pysamstats
-  - pandas
+  - python=3.7
+  - pysam==0.16.0.1
+  - pysamstats==1.1.2
+  - pandas==1.1.3
   - pip
   - pip:
-    - gffpandas
+    - gffpandas==1.2.0
