--- a/config/pipeline_parameters.yaml
+++ b/config/pipeline_parameters.yaml
@@ -28,6 +28,7 @@ threads:
     Illumina_extract_raw_consensus: 6
     # Settings for the Nanopore-reference workflow
     Nanopore_reference_alignment: 6
+    Nanopore_SoftClipper: 2
     Nanopore_cleanup: 12
     Nanopore_primer_removal: 12
 
