--- a/config/pipeline_parameters.yaml
+++ b/config/pipeline_parameters.yaml
@@ -29,8 +29,9 @@ threads:
     # Settings for the Nanopore-reference workflow
     Nanopore_reference_alignment: 6
     Nanopore_SoftClipper: 2
-    Nanopore_cleanup: 12
+    Nanopore_cleanup: 4
     Nanopore_primer_removal: 12
+    Nanopore_QC: 6
 
 ######################################
 ### Pipeline parameters            ###
