--- a/bin/envs/Nano_clean.yaml
+++ b/bin/envs/Nano_clean.yaml
@@ -12,10 +12,11 @@ dependencies:
   - bedtools==2.29.2
   - pysam==0.16.0.1
   - pysamstats==1.1.2
-  - pandas==1.1.3
+  - modin==0.8.3
+  - pandas
   - mkl-service
+  - mappy==2.17
   - biopython==1.78
   - openjdk==11.0.8
   - fastqc==0.11.8
   - fastp==0.20.1
-  - cutadapt==2.10
