--- a/bin/envs/Nano_ref_consensus.yaml
+++ b/bin/envs/Nano_ref_consensus.yaml
@@ -10,6 +10,7 @@ dependencies:
   - pysam==0.16.0.1
   - pysamstats==1.1.2
   - pandas==1.1.3
+  - biopython==1.78
   - pip
   - pip:
     - gffpandas==1.2.0
