--- a/bin/envs/Illumina_ref_alignment.yaml
+++ b/bin/envs/Illumina_ref_alignment.yaml
@@ -4,12 +4,13 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-    - samtools==1.10
+    - python=3.7
+    - samtools>=1.10
     - bowtie2==2.3.5
     - tbb==2020.3
     - gawk==4.2.1
-    - bcftools==1.10
+    - bcftools>=1.10
     - bedtools==2.29.2
     - tabix==0.2.6
     - seqtk==1.2.0
-    - lofreq==2.1.3.1
+    - lofreq>=2.1.3.1
