--- a/bin/envs/Krona_plot.yaml
+++ b/bin/envs/Krona_plot.yaml
@@ -5,6 +5,6 @@ channels:
   - defaults
 dependencies:
     - krona==2.7.1
-    - pandas==0.23.4
-    - python==3.7.0
-    - numpy==1.16.4
+    - pandas==1.2.4
+    - python=3.7
+    - numpy>=1.16.4
