--- a/bin/envs/Nano_ref_alignment.yaml
+++ b/bin/envs/Nano_ref_alignment.yaml
@@ -4,6 +4,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+    - python=3.7
     - minimap2==2.17
     - samtools==1.10
     - bowtie2==2.3.5
