--- a/bin/envs/heatmaps.yaml
+++ b/bin/envs/heatmaps.yaml
@@ -4,6 +4,6 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - bokeh=1.0.1
-  - numpy=1.15.4
-  - pandas=0.23.4
+  - bokeh>=1.0.1
+  - numpy>=1.15.4
+  - pandas>=1.2.4
