--- a/bin/envs/Krona_plot.yaml
+++ b/bin/envs/Krona_plot.yaml
@@ -4,7 +4,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-    - krona==2.7.1
-    - pandas==0.23.4
-    - python==3.7.0
-    - numpy==1.16.4
+  - python=3.7
+  - krona>=2.7.1
+  - pandas>=0.23.4
+  - numpy>=1.16.4
