--- a/bin/envs/QC_and_clean.yaml
+++ b/bin/envs/QC_and_clean.yaml
@@ -4,9 +4,10 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-    - fastqc==0.11.8
-    - trimmomatic==0.38
-    - openjdk==10.0.2 # See issue #135 on github: https://github.com/DennisSchmitz/Jovian/issues/135
-    - fastp==0.20.1
-    - cutadapt==2.10
-    - porechop==0.2.4
+  - python=3.7
+  - fastqc>=0.11.8
+  - trimmomatic>=0.38
+  - openjdk==10.0.2 # See issue #135 on github: https://github.com/DennisSchmitz/Jovian/issues/135
+  - fastp>=0.20.1
+  - cutadapt>=2.10
+  - porechop>=0.2.4
