--- a/bin/envs/HuGo_removal.yaml
+++ b/bin/envs/HuGo_removal.yaml
@@ -4,8 +4,9 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-    - bowtie2==2.3.5
-    - tbb==2020.3
-    - samtools==1.9
-    - bedtools==2.27.1
-    - minimap2==2.17
+  - python=3.7
+  - bowtie2==2.3.5
+  - tbb==2020.3
+  - samtools>=1.9
+  - bedtools>=2.27.1
+  - minimap2>=2.17
