--- a/bin/envs/Jovian_helper_environment.yaml
+++ b/bin/envs/Jovian_helper_environment.yaml
@@ -4,10 +4,11 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - bowtie2==2.3.4.3
-  - blast==2.9.0
-  - krona==2.7.1
-  - mgkit==0.3.4
+  - bowtie2==2.3.5
+  - tbb==2020.3
+  - blast==2.12.0
+  - krona>=2.7.1
+  - mgkit>=0.3.4
   - make==4.2.1 # Not installed by default on WSL, needed for Krona db updater
   - gawk==5.1.0
   - awscli
