--- a/bin/envs/Nano_ref_alignment.yaml
+++ b/bin/envs/Nano_ref_alignment.yaml
@@ -4,14 +4,15 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-    - minimap2==2.17
-    - samtools==1.10
-    - bowtie2==2.3.5
-    - tbb==2020.3
-    - gawk==4.2.1
-    - bcftools==1.10
-    - bedtools==2.29.2
-    - tabix==0.2.6
-    - seqtk==1.2.0
-    - seqkit==0.14.0
-    - pysam==0.16.0.1
+  - python=3.7
+  - minimap2>=2.17
+  - samtools>=1.10
+  - bowtie2>=2.3.5
+  - tbb>=2020.3
+  - gawk>=4.2.1
+  - bcftools>=1.10
+  - bedtools>=2.29.2
+  - tabix>=0.2.6
+  - seqtk>=1.2.0
+  - seqkit>=0.14.0
+  - pysam>=0.16.0.1
