--- a/bin/envs/de_novo_assembly.yaml
+++ b/bin/envs/de_novo_assembly.yaml
@@ -4,6 +4,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-    - spades==3.11.0=py36_0
-    - seqtk==1.2.0
-    - gawk==4.2.1
+  - python=3.7
+  - spades==3.15.3
+  - seqtk==1.3
+  - gawk==5.1.0
